# space-command

./: .gitignore  MANIFEST.in  README.rst  environment.yml  setup.cfg  setup.py  tox.ini
doc/source/: conf.py  index.rst
space/: __init__.py  __main__.py  ccsds.py  clock.py  config.py  env.py  ephem.py  events.py  map.py  moon.py  passes.py  phase.py  planet.py  planets.py  sat.py  satellites.py  station.py  stations.py  sunmoon.py  tle.py  utils.py  wspace.py
space/map/: __init__.py  background.py  map.py  wephem.py
space/tle/: __init__.py  celestrak.py  common.py  db.py  spacetrack.py
space/tle_dir/: fetch.py  plot.py
src/space/: __init__.py  __main__.py  circle.py  env.py  passes.py  satellites.py  stations.py  tle.py  version.py
src/spacecmd/: chrono.py  env.py  ephem.py  main.py  passes.py  satellites.py  stations.py  tle.py  version.py
tests/: conftest.py  test_ccsds.py  test_clock.py  test_config.py  test_main.py  test_passes.py  test_planets.py  test_sat.py  test_tle.py  test_utils.py
tests/data/: visual.txt
