[metadata]
name = space-command
version = attr: space.__version__
description = Space Command
long_description = file: README.rst
keywords = flight dynamic, satellite, space
author = Jules David
author_email = jules@onada.fr
license = MIT License
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find: space/
include_package_data = True
zip_safe = False
install_requires =
    beyond
    peewee
    requests
    aiohttp
    docopt
    matplotlib
    pyyaml

[options.entry_points]
console_scripts = 
    space = space.__main__:main
space.commands =
    tle = space.tle:space_tle
    passes = space.passes:space_passes
    stations = space.stations:space_stations
    moon = space.sunmoon:space_moon
    sun = space.sunmoon:space_sun
    map = space.map:space_map
    config = space.config:space_config
    planets = space.planets:space_planets

[tool:pytest]
addopts = --doctest-modules space/