[metadata]
name = space-command
version = attr: space.__version__
description = Space Command
long_description = file: README.rst
keywords = flight dynamic, satellite, space
author = Jules David
author_email = jules@onada.fr
license = MIT License
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    beyond
    peewee
    requests
    aiohttp
    docopt
    matplotlib
    pyyaml

[options.extras_require]
tests =
    pytest
    pytest-cov
    pytest-console-scripts

[options.entry_points]
console_scripts = 
    space = space.__main__:main
    wspace = space.wspace:wspace
space.commands =
    tle = space.tle:space_tle
    passes = space.passes:space_passes
    stations = space.stations:space_stations
    phase = space.phase:space_phase
    map = space.map:space_map
    config = space.config:space_config
    planets = space.planets:space_planets
    clock = space.clock:space_clock
    log = space.config:space_log
    events = space.events:space_events
    sat = space.satellites:space_sat
space.wshook =
    00 = space.config:wshook
    10 = space.tle:wshook
    20 = space.stations:wshook
    30 = space.satellites:wshook

[tool:pytest]
addopts = -v --cov space --cov-report html --doctest-modules space/ tests/
script_launch_mode = subprocess
filterwarnings =
    ignore: Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated, and in 3.8 it will stop working