[metadata]
name = space-command
version = attr: space.__version__
description = Space Command
long_description = file: README.rst
keywords = flight dynamic, satellite, space
author = Jules David
author_email = jules@onada.fr
license = MIT License
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    beyond
    peewee
    requests
    aiohttp
    docopt
    matplotlib
    pyyaml
    spacetrack

[options.extras_require]
tests =
    pytest
    pytest-cov
    pytest-console-scripts

[options.entry_points]
console_scripts = 
    space = space.__main__:main
    wspace = space.wspace:wspace
space.commands =
    clock = space.clock:space_clock
    config = space.config:space_config
    events = space.events:space_events
    ephem = space.ephem:space_ephem
    log = space.config:space_log
    map = space.map:space_map
    passes = space.passes:space_passes
    phase = space.phase:space_phase
    planet = space.planet:space_planet
    sat = space.sat:space_sat
    station = space.station:space_station
    tle = space.tle:space_tle
space.wshook =
    00 = space.config:wshook
    10 = space.tle:wshook
    20 = space.station:wshook
    30 = space.sat:wshook

[tool:pytest]
addopts = -v --cov space --cov-report html --doctest-modules space/ tests/
script_launch_mode = subprocess
filterwarnings =
    ignore: Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated, and in 3.8 it will stop working
